--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/coffeemachine
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+spring.flyway.user=postgres
+spring.flyway.password=password
+spring.flyway.schemas=public
+spring.flyway.url=jdbc:postgresql://localhost:5432/coffeemachine
+spring.flyway.encoding=UTF-8
